--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "qfstudy <qifeistudy@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --no-cache --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --watch --inline --progress --no-cache --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "build": "node build/build.js",
     "unit-test": "npx webpack --config webpack.test.conf.js --no-cache & npx karma start",
